deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaushal-mental-models-service
  labels:
    app: kaushal-mental-models
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: kaushal-mental-models
